[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seek-release"
version = "0.1.3"
readme = "README.md"
description = "Standalone IP threat scanner using local blocklists — no API required"
authors = [{ name = "DEMEJI" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "psutil",
    "pandas",
    "pyfiglet",
    "rich",
]

[project.scripts]
seek = "seek.cli:main"

[tool.setuptools]
packages = ["seek"]

[tool.setuptools.package-data]
seek = ["data/*"]